--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
+    "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
     "method-override": "^3.0.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
     "sanitize-html": "^2.11.0",
     "sequelize": "^6.33.0"
