--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
-    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,7 +21,7 @@
     "express-validator": "^7.0.1",
     "fs": "^0.0.1-security",
     "helmet": "^7.0.0",
-    "method-override": "^3.0.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.6.1",
     "sanitize-html": "^2.11.0",
